; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/reiserfs/extr_do_balan.c_reiserfs_invalidate_buffer.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/reiserfs/extr_do_balan.c_reiserfs_invalidate_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tree_balance = type { i32 }
%struct.buffer_head = type { i32 }
%struct.block_head = type { i32 }

@FREE_LEVEL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @reiserfs_invalidate_buffer(%struct.tree_balance* %0, %struct.buffer_head* %1) #0 {
  %3 = alloca %struct.tree_balance*, align 8
  %4 = alloca %struct.buffer_head*, align 8
  %5 = alloca %struct.block_head*, align 8
  store %struct.tree_balance* %0, %struct.tree_balance** %3, align 8
  store %struct.buffer_head* %1, %struct.buffer_head** %4, align 8
  %6 = load %struct.buffer_head*, %struct.buffer_head** %4, align 8
  %7 = call %struct.block_head* @B_BLK_HEAD(%struct.buffer_head* %6)
  store %struct.block_head* %7, %struct.block_head** %5, align 8
  %8 = load %struct.block_head*, %struct.block_head** %5, align 8
  %9 = load i32, i32* @FREE_LEVEL, align 4
  %10 = call i32 @set_blkh_level(%struct.block_head* %8, i32 %9)
  %11 = load %struct.block_head*, %struct.block_head** %5, align 8
  %12 = call i32 @set_blkh_nr_item(%struct.block_head* %11, i32 0)
  %13 = load %struct.buffer_head*, %struct.buffer_head** %4, align 8
  %14 = call i32 @clear_buffer_dirty(%struct.buffer_head* %13)
  %15 = load %struct.tree_balance*, %struct.tree_balance** %3, align 8
  %16 = load %struct.buffer_head*, %struct.buffer_head** %4, align 8
  %17 = call i32 @store_thrown(%struct.tree_balance* %15, %struct.buffer_head* %16)
  ret void
}

declare dso_local %struct.block_head* @B_BLK_HEAD(%struct.buffer_head*) #1

declare dso_local i32 @set_blkh_level(%struct.block_head*, i32) #1

declare dso_local i32 @set_blkh_nr_item(%struct.block_head*, i32) #1

declare dso_local i32 @clear_buffer_dirty(%struct.buffer_head*) #1

declare dso_local i32 @store_thrown(%struct.tree_balance*, %struct.buffer_head*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
